interval y stop boradcasting
interval a 30 segundos & boton de stop

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "4.2.*"
+		"facebook/php-sdk-v4" : "4.0.*",
+		"jwilsson/spotify-web-api-php": "0.6.*",
 	},
 	"autoload": {
 		"classmap": [
