--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "4.2.*"
+		"laravel/framework": "4.2.*",
+		"facebook/php-sdk-v4" : "4.0.*",
+		"jwilsson/spotify-web-api-php": "0.6.*"
 	},
 	"autoload": {
 		"classmap": [
